# vitalis-elite-medical-dating

./: .env.example  .eslintrc.json  .gitignore  AUDIT_TEAM10_15.md  AUDIT_TEAM1_2.md  AUDIT_TEAM3_4.md  AUDIT_TEAM5_6.md  AUDIT_TEAM7_8_9.md  AUTOMATION_AUDIT.json  AUTOMATION_ESLINT.json  AUTOMATION_ESLINT_ERR.txt  AUTOMATION_SUMMARY.txt  App.tsx  App.tsx.part1  BACKEND_AUDIT_REPORT.md  CHANGELOG.md  CROSS_REVIEW_REPORT.md  DESIGN_OVERHAUL.md  DEVILS_ADVOCATE_REPORT.md  FIX_REPORT_BACKEND.md  FIX_REPORT_FRONTEND.md  FIX_REPORT_PRIORITY.md  FIX_VERIFICATION_REPORT.md  FRONTEND_AUDIT_REPORT.md  MASTER_ISSUES.md  MOBILE_PERFECTION_ORCHESTRATOR_v2.1_COMPLETE.md  MOBILE_UI_UX_AUDIT_ORCHESTRATOR.md  MVW_BPM_SALES_PORTAL_USERS.sql  PRIVACY_AUDIT_REPORT.md  QUICK_WINS.md  README.md  RECON_REPORT.md  REFACTOR_PLAN.md  SECURITY_AUDIT_REPORT.md  SECURITY_URGENT.md  Sağlık Bölümleri.xlsx  TECH_DEBT.md  TS_ERRORS.md  VITALIS_ARCHITECTURE_v2.0.2_PRODUCTION.md  VITALIS_COMPLETE_FIX_ORCHESTRATOR_v3.md  (+17 more)
.github/: CODEOWNERS
.husky/: pre-commit
SafeAgent/: Cargo.toml
SafeAgent/crates/gateway/: Cargo.toml
SafeAgent/crates/gateway/src/: main.rs
artifacts/: RC_RELEASE_CHECKLIST.md
audit/: 01_BUILD_MASTER_REPORT.md  02_IOS_PLATFORM_REPORT.md  03_ANDROID_PLATFORM_REPORT.md  04_UI_CONSISTENCY_REPORT.md  05_SWIPE_ENGINE_REPORT.md  06_PHOTO_MEDIA_REPORT.md  07_CHAT_SYSTEM_REPORT.md  08_PUSH_NOTIFICATION_REPORT.md  09_VERIFICATION_FLOW_REPORT.md  10_PREMIUM_PAYMENT_REPORT.md  11_PERFORMANCE_REPORT.md  12_SECURITY_REPORT.md  13_PRIVACY_REPORT.md  14_ACCESSIBILITY_REPORT.md  (+27 more)
(+535 files in other folders)
