[package]
name = "safeagent-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "safeagent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
